--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,11 +1,9 @@
-#summary One-sentence summary of this page.
-
 = Simple Life项目 =
 
-欢迎访问SimpleLife项目主页.
+'''欢迎访问SimpleLife项目主页.'''
 
 
-= Details =
+
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
