Edited wiki page through web user interface.

--- a/wiki/SimpleLife_Product.wiki
+++ b/wiki/SimpleLife_Product.wiki
@@ -74,3 +74,29 @@ mvn jetty:run
 }}}
 
 然后通过浏览器访问: http://localhost:8080/simplelife.product
+
+== 开发者文档 ==
+
+以上是作为部署者和使用者需要执行的内容.
+
+如果需要理解系统设计和参与开发, 需要
+
+命令行执行:
+
+{{{
+mvn site
+}}}
+
+生成系统文档网站.
+
+访问生成的文档: simplelife.product/target/site/index.html
+
+其中主要内容有:
+
+ # 问题追踪: 提供问题管理的工具链接, 可提交bug或者希望增加(增强)的功能
+ # 项目授权: 授权协议
+ # 项目团队: 所有对本项目有贡献的人员列表和联系方式等
+ # 项目依赖: 本项目依赖的库的列表
+ # 邮件列表: 是一个BBS/邮件列表, 可以象BBS一样发帖和跟帖, 所有变化又作为邮件发给用户
+ # 源代码库: 提供链接, 在浏览器浏览源代码, 并说明如何通过subversion工具下载源代码
+ # 项目报告: 有关代码的javadoc, 准备将详细设计由javadoc生成, 另外, 有测试的报告.
