--- a/wiki/SimpleLife_Product.wiki
+++ b/wiki/SimpleLife_Product.wiki
@@ -16,7 +16,7 @@
 
  # 安装JDK 1.6.0及以上版本;
  # 安装subversion, 下载地址: http://subversion.tigris.org/files/documents/15/39559/svn-1.4.5-setup.exe
- # 安装maven, 下载地址: http://www.apache.org/dyn/closer.cgi/maven/binaries/maven-2.0.7-bin.zip, 解压缩
+ # 安装maven, 下载地址: http://www.apache.org/dyn/closer.cgi/maven/binaries/maven-2.0.7-bin.tar.gz, 解压缩
  # 检查subversion安装是否成功:
 {{{
 svn --version
