--- a/wiki/SimpleLife_Sample_Ant.wiki
+++ b/wiki/SimpleLife_Sample_Ant.wiki
@@ -33,3 +33,36 @@ ant -version
 }}}
 
 == 下载源代码 ==
+
+打开命令行, 进入某个目录(源代码将下载到该目录下)
+
+输入如下命令:
+{{{
+svn checkout http://simplelife.googlecode.com/svn/trunk/sample.ant
+}}}
+
+== 编译与构建 ==
+
+命令行进入sample.ant目录
+
+输入命令，列出所有可执行任务：
+{{{
+ant -projecthelp
+}}}
+
+应该列出如下提示：
+{{{
+Buildfile: build.xml
+
+Main targets:
+
+ archive   打包java程序
+ clean     清理中间数据
+ compile   编译java程序
+ deploy    部署web项目
+ init      初始化工作
+ javadocs  生成javadoc
+ undeploy  卸载web项目
+ war       生成war文件
+Default target: archive
+}}}
