--- a/wiki/Java_Service_Wrapper.wiki
+++ b/wiki/Java_Service_Wrapper.wiki
@@ -6,6 +6,8 @@
 
 [ant_setup 安装ant]。
 
+设置环境变量_JAVA_HOME_
+
 = 下载源代码 =
 
 命令行输入：
@@ -31,3 +33,13 @@ wrapper wrapper.conf
 }}}
 
 这就是使用wrapper启动服务器的简单示例。
+
+= 代码介绍 =
+
+src/sample/wrapper/SampleServer.java：模拟一个服务器程序，取消代码中的异常注释，可以演示wrapper重启的功能。
+
+build.xml和build.properties：ant脚本文件。
+
+res目录中是配置文件和wrapper工具。
+
+dist/wrapper.conf：wrapper的配置文件。
